configure layout for the chating page.

--- a/package.json
+++ b/package.json
@@ -50,7 +50,9 @@
 		"bits-ui": "^0.17.0",
 		"clsx": "^2.1.0",
 		"embla-carousel-svelte": "8.0.0-rc22",
+		"lucide-svelte": "^0.341.0",
 		"mode-watcher": "^0.2.0",
+		"paneforge": "^0.0.2",
 		"pocketbase": "^0.21.1",
 		"svelte-icons": "^2.1.0",
 		"svelte-motion": "^0.12.1",
